# MetronomePlus

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/br/com/jonatas/metronomeplus/: ExampleInstrumentedTest.kt
app/src/androidTest/java/br/com/jonatas/metronomeplus/presenter/util/: CustomViewMatchers.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  metronomeplus.cpp
app/src/main/cpp/cpp/: Metronome.cpp  Metronome.h  metronomeplus-lib.cpp
app/src/main/cpp/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  DataSource.h  IRenderableAudio.h  Mixer.h  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  Player.h
app/src/main/cpp/cpp/model/: Beat.h  Tone.h
app/src/main/cpp/cpp/utils/: Constants.h  Logging.h
app/src/main/java/br/com/jonatas/metronomeplus/: MainActivity.kt
app/src/main/java/br/com/jonatas/metronomeplus/core/: AngularVelocityTracker.kt  CircularSeekBar.kt
app/src/main/java/br/com/jonatas/metronomeplus/data/engine/: MetronomeEngineImpl.kt
app/src/main/java/br/com/jonatas/metronomeplus/data/mapper/: BeatDtoMapper.kt  BeatMapper.kt  BeatStateDtoMapper.kt  BeatStateMapper.kt  MeasureDtoMapper.kt  MeasureMapper.kt
app/src/main/java/br/com/jonatas/metronomeplus/data/model/: BeatDto.kt  BeatStateDto.kt  MeasureDto.kt
app/src/main/java/br/com/jonatas/metronomeplus/data/provider/: AssetProvider.kt  (+5 more)
app/src/main/java/br/com/jonatas/metronomeplus/model/: Beat.kt  Tone.kt
app/src/main/java/br/com/jonatas/metronomeplus/teste/: AngularVelocityTracker.kt
app/src/main/java/br/com/jonatas/metronomeplus/ui/: BaseActivity.kt  MainActivity.kt
app/src/main/java/br/com/jonatas/metronomeplus/utils/: CircularSeekBar.kt
app/src/main/res/drawable/: beat_item_accent.xml  beat_item_accent_color.xml  beat_item_medium.xml  beat_item_medium_color.xml  beat_item_normal.xml  beat_item_normal_color.xml  beat_item_silence.xml  beat_item_silence_color.xml  display_screen.xml  metronome_button.xml  metronome_button_disabled.xml  metronome_button_pressed.xml  metronome_button_state.xml  metronome_button_text_color_state.xml  overlay_gradient_metronome.xml
app/src/main/res/layout/: activity_main.xml  beat_item.xml  fragment_metronome.xml  rotary_knob_view.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml
app/src/test/java/br/com/jonatas/metronomeplus/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+54 files in other folders)
